[gd_scene load_steps=9 format=2]

[ext_resource path="res://interaction/bonuses/heart.gd" type="Script" id=1]
[ext_resource path="res://art/life_heart.png" type="Texture" id=2]
[ext_resource path="res://art/miniparticle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 34.0

[sub_resource type="Curve" id=2]
min_value = 0.1
_data = [ Vector2( 0, 0.1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 0.40708, 0.256637, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=4]
min_value = 0.5
max_value = 2.0
_data = [ Vector2( 0, 0.5 ), 0.0, 0.0, 0, 0, Vector2( 1, 2 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 0.920354, 0.893805, 1, 1, 1, 1, 0 )

[node name="heart" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="cpoly" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0.480537, 27.6801, -22.5579, 1.86115, -18.5857, -18.794, 18.7524, -19.5884, 23.9162, -0.919357 )

[node name="area" type="Area2D" parent="."]
monitoring = false

[node name="cshape" type="CollisionShape2D" parent="area"]
visible = false
shape = SubResource( 1 )

[node name="shine" type="CPUParticles2D" parent="."]
emitting = false
amount = 12
lifetime = 0.5
local_coords = false
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 15, 15 )
spread = 180.0
gravity = Vector2( 0, 10 )
initial_velocity = 20.0
angular_velocity = 60.0
angular_velocity_random = 1.0
tangential_accel = 35.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="sp2d" type="VisibilityNotifier2D" parent="."]

[node name="shine_end" type="CPUParticles2D" parent="."]
emitting = false
amount = 12
lifetime = 0.5
one_shot = true
explosiveness = 0.9
local_coords = false
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 20, 20 )
spread = 180.0
gravity = Vector2( 0, 10 )
initial_velocity = 20.0
angular_velocity = 60.0
angular_velocity_random = 1.0
tangential_accel = 35.0
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="death" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="activate" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="area" to="." method="_on_body_enter"]
[connection signal="screen_entered" from="sp2d" to="." method="_on_enter_screen"]
[connection signal="screen_exited" from="sp2d" to="." method="_on_exit_screen"]
[connection signal="timeout" from="death" to="." method="_on_timeout"]
[connection signal="timeout" from="activate" to="." method="_on_activate"]
